feat: login with google

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "dedoc/scramble": "^0.10.11",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
