--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+RAJAONGKIR_API_KEY="YOUR_API_KEY"
+RAJAONGKIR_API_URL="http://api.rajaongkir.com/starter"
+
+GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+GOOGLE_REDIRECT_URL=GOOGLE_REDIRECT_URL
